Se agrega en el main

--- a/inicio.html
+++ b/inicio.html
@@ -25,7 +25,7 @@
   <body>
       <main class="barra">
       <section id="contenid">
-        <h1>Principales Sistemas de una Motocicleta</h1>
+        <h1>Principales Sistemas de una Motocicleta nuevo cambio</h1>
         <figure>
           <image src="motocicleta.jpg"  width="70%" height="100%" item-align="center"></image>
         </figure>
